@@ -1,16 +1,21 @@
-// depreciation example - sun.misc.BASE64Encoder;
+// depreciation example - sun.misc.BASE64Encoder; - Updated to Java 21
 package com.amazonaws.samples.appconfig.utils;
-import sun.misc.BASE64Encoder;
 
+import java.util.Base64;
+import java.util.Calendar;
 import java.util.Date;
 
 
 public class Encoder {
 
-    Date defaultDate = new Date(1999, 0, 1);
+    // Updated to use Calendar instead of deprecated Date constructor
+    Date defaultDate = new Calendar.Builder()
+            .setDate(1999, Calendar.JANUARY, 1)
+            .build()
+            .getTime();
 
     byte[] bytes = new byte[57];
-    String enc1 = new sun.misc.BASE64Encoder().encode(bytes);
+    String enc1 = Base64.getEncoder().encodeToString(bytes);
 
 
 }
